--- a/index.html
+++ b/index.html
@@ -12,12 +12,22 @@
 
 </head>
 <body>
-    About
-    Services
-    Projects
-    Contact
-
-    <h1>We are creatives</h1>
+    <header>
+        <div>
+            <img src="./image/logo.svg" alt="Logo Sunnyside">
+            <img src="./image/icons/icon-hamburger.svg" alt="Menu hamburger">
+            <nav>
+                <ul>
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>Projects</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </div>
+        <h1>We are creatives</h1>
+        <img src="./image/icons/icon-arrow-down.svg" alt="Icône de flèche">
+    </header>
 
     Transform your brand
 
