media queries 'header'

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <img src="./image/icons/icon-hamburger.svg" alt="Menu hamburger">
             <nav>
                 <ul>
-                    <li>About</li>
-                    <li>Services</li>
-                    <li>Projects</li>
-                    <li>Contact</li>
+                    <li><a>About</a></li>
+                    <li><a>Services</a></li>
+                    <li><a>Projects</a></li>
+                    <li><a>Contact</a></li>
                 </ul>
             </nav>
         </div>
