--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
     <header>
         <div>
             <img src="./image/logo.svg" alt="Logo Sunnyside">
-            <img src="./image/icons/icon-hamburger.svg" alt="Menu hamburger">
-            <nav>
+            <a href="#" id="btntogglenav">
+                <img src="./image/icons/icon-hamburger.svg" alt="Menu hamburger">
+            </a>
+            <nav id="sidenav" class="inactive">
+                <div class="triangle"></div>
                 <ul>
-                    <li><a>About</a></li>
-                    <li><a>Services</a></li>
-                    <li><a>Projects</a></li>
-                    <li><a>Contact</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -149,6 +152,9 @@
         </div>   
         
     </footer>
+
+
+    <script src="script.js"></script>
 
 </body>
 </html>
